fixed tag wrap in create post - tags that overflow will break to new line

--- a/src/Components/blog/blogAdmin/BlogAdmin.css
+++ b/src/Components/blog/blogAdmin/BlogAdmin.css
@@ -71,9 +71,6 @@
 
   .darkTagAdmin:before, .lightTagAdmin:before{
     display: inline-block;
-    /*content: "\2573"; /* 2A09 2573 00d7 This will render the 'X' */
-    content: "\2715";
-    /* content: "\00d7"; */
   }
 
   .lightTag {
@@ -239,26 +236,4 @@
 
 .lightTagAdmin:active, .darkTagAdmin:active, .blogPostEditBtn:active, .admingBlogSaveBtn:active, .admingBlogDeleteBtn:active, #addTagBtn:active, .addNewPostHeader:active, .admingBlogCancelBtn:active{
   opacity: 100%;
-}
-
-.editTagsWrapper {
-  display: flex;
-  border: 2px solid #102851;
-  padding: 10px 10px;
-}
-
-.blogTagAdminInput {
-   flex: 1;
-   height: 44px;
-   padding: 0px 10px;
-   font-family: 'Newsreader';
-   font-weight: normal;
-   font-size: 20px;
-   border: none;
-   outline: none;
-}
-
-.blogTagAdminInput:active {
-  border: none;
-  outline: none;
 }
